# flask-sitemapper

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml  tests.yml
flask_sitemapper/: __init__ .py  __init__.py  gzip.py  sitemapper.py  templates.py  url.py
src/flask_sitemapper/: sitemapper.py  templates.py
tests/: README.md  test_add_endpoint.py  test_alternative_initialization.py  test_arguments.py  test_basic_app.py  test_blueprints.py  test_blueprints_with_dynamic_routes.py  test_datetime.py  test_dynamic_route_arguments.py  test_dynamic_route_with_generator_function.py  test_dynamic_route_with_generator_function_and_cache.py  test_dynamic_routes.py  test_gzip.py  test_http.py  test_master.py  test_not_registered.py  test_server_name.py
