[tool.poetry]
name = "flask-sitemapper"
# The version will be automatically set when a release is created
version = "0.0.0"
description = "Flask extension for generating XML sitemaps"
authors = ["h-janes <dev@hjanes.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python3", "flask", "sitemap", "xml"]
repository = "https://github.com/h-janes/flask-sitemapper"
documentation = "https://github.com/h-janes/flask-sitemapper/wiki"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]
packages = [{include = "flask_sitemapper"}]

[tool.poetry.dependencies]
python = ">=3.8"
flask = ">=2.2.2"
jinja2 = ">=3.1.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.3.0"
isort = ">=5.10.1"
pytest = ">=7.2.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
