[metadata]
name = flask-sitemapper
version = 1.0.6
author = H Janes
author_email = dev@hjanes.com
description = Sitemap generator for Flask applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/h-janes/flask-sitemapper
project_urls =
    Bug Tracker = https://github.com/h-janes/flask-sitemapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
